--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -1,4 +1,4 @@
-## Sound
+## In Class Notes
 
 - Bjork - themes within each song to highlight different movements/information - using unique instruments
 - tesla coil and gravity pendulum
@@ -6,4 +6,11 @@
 - share structures with listeners, music workshops so others can use it, play with the structure and hear what they made, direct impact
 - gravity, counterpoint - baseline, teaching musical theory through physical elements
 - counterpoint/baseline, singing along with it, similar to human/gravity relationship
+- started with gut feeling = worked with others, different apps
+- Virus - about failed relationships - killed the cell
+- connecting biology with real life relationships and putting it on an ipad
+- generative music, computer based composition
+- ever different and changing created by a system
+- pathway happens on its own
+- collaboration between people and tech, more intent behind, a feedback loop between AI and reaction
 - 
