--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -13,4 +13,36 @@
 - ever different and changing created by a system
 - pathway happens on its own
 - collaboration between people and tech, more intent behind, a feedback loop between AI and reaction
+- sound physical but can't see, different ways to how it is visualized in physical form
+- soundscapes created, can't see it, sound not our immediate 
+- original notes are sterile, expand and illstrate using senses - burning, smell, sounds
+- a written description of effect of centuries, digital synethesia - how much do we miss
+- experimental archiology - explore an object by using replica
+- listening to the habitat over time, changes in sound - airplanes
+- APP - virus attacking cell - song gets stuck, don't hear full story unless you let the cell die.
+- musician not centred - participatory - access, explained, tied to external rhythms
+- technologist comes to forward, individual using it, made decisions how crowd smashing will be transfered into pleasing music, what sounds are released
+- not thinking about other possibilities
+- bringing people in, curator of their participations
+- anyone can be an 'artist'
+- word fix spelling errors and grammar - untrained writer - system helping you adjust to fit perscriptive grammar. 
+- normalize input into an output that adheres to rules
+- AI not getting smarter, we are getting better at thinking like them, adjust expectations for what they can do
+- music loosing rich anaolg stuff, trained to expect crisp distinction between tonal values, digital strucutre
+- choose change the user
+- MIDI not correct, hear it wrong digital
+- can tell things written in different environments
+- reaction to music
+- complicated ideas - machine vs by hand, machine facilitate verbal diarea, hands hurt longer you write
+- graphic notation of sound, 
+- up for interpretation, not as literal as sheet music, spend sometime to understand
+- software to write like visulized pieces.
+- format visual or traditional changes composition production
+- graphic score, not sure how it will sound, if you are not there you need to be clear so others understand. Not everything understood. Not always an initial thought of what it will be
+-mistake
+- western - heroic music, obscurity, different influences for what you hear/see
+- mixture of graphic score an normal notation
+- visualization, circles, 
+- muldover - controlerism - turnablism - idea around different instruments, performance and approach, tools as instruments, different from DJs who just play records
+- manipulating sounds using software
 - 
