--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -45,4 +45,22 @@
 - visualization, circles, 
 - muldover - controlerism - turnablism - idea around different instruments, performance and approach, tools as instruments, different from DJs who just play records
 - manipulating sounds using software
+- still need a facilitator
+- miniball - playing catch and makes sound when you catch it?
+- electric guitar - cardboard - from event
+- music plays minecraft
+- linguistic element - innate - what sounds wrong, dissonance - 
+- natural grammer - not within convention - makes sense, similar
+- music - contrast, musical sentance
+- music meaning different - there are conventions for expression within music
+- major key vs. minor key - shift teen spirit to a major key
+- words assume meaning and others understand
+- instrument - different interpretations, orchestra different than with other groups
+- older generation - orchestra different format - social bias?
+- slasher film? - in focus different
+- feedback loop between us changing tech and tech changing us
+- musak - shifts in stimulus, influencing energy based on music - for consumers and employees
+- vibe being sold 
+- audio architecture - chart destination and travel - travel through hallways - familiar lower volume
+- familiar but in background, hits within the store
 - 
