--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -63,4 +63,7 @@
 - vibe being sold 
 - audio architecture - chart destination and travel - travel through hallways - familiar lower volume
 - familiar but in background, hits within the store
-- 
+- writing with sound - larger data set explored through sound
+- sound mapping - more like pembrooke soundscapes
+- link to others
+- creating sound, using sound for information - to describe something, more alive, create something
