--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -67,3 +67,6 @@
 - sound mapping - more like pembrooke soundscapes
 - link to others
 - creating sound, using sound for information - to describe something, more alive, create something
+
+- biphilia - game
+- 
