--- a/Notes/2018-03-12-Sound.md
+++ b/Notes/2018-03-12-Sound.md
@@ -69,4 +69,5 @@
 - creating sound, using sound for information - to describe something, more alive, create something
 
 - biphilia - game
+- experience nature, music and tech comming together
 - 
